--- a/package.json
+++ b/package.json
@@ -3,8 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/core": "^10.0.7",
+    "@emotion/styled": "^10.0.7",
+    "@material-ui/core": "^3.9.2",
+    "facepaint": "^1.2.1",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "react-qr-reader": "^2.1.2",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3"
   },
   "scripts": {
