--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/core": "^10.0.7",
     "@emotion/styled": "^10.0.7",
     "@material-ui/core": "^3.9.2",
+    "babel-plugin-emotion": "^10.0.7",
     "facepaint": "^1.2.1",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
