--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "path": "^0.12.7",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "react-player": "^1.9.3",
     "react-qr-reader": "^2.1.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
